Loading error IPYNB on Github
I noticed a loading error on Github for this IPYNB file. I have re-run the script, noticed a small indentation error on line 148 of cell 1 (function: convert_units_from_dict)

--- a/Code and Data/Assignment.ipynb
+++ b/Code and Data/Assignment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
     "            raise RuntimeError(\"Unit \"  + retrieval_value + \" not found in dictionary. Please update data or dictionary.\")\n",
     "\n",
     "    try:\n",
-    "    x = dict_to_use[retrieval_value]\n",
+    "        x = dict_to_use[retrieval_value]\n",
     "        if callable(x):\n",
     "             # applies the unit transform function as stated in dictionary\n",
     "            return x(data_in)\n",
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {
     "tags": [
      "outputPrepend",
@@ -881,13 +881,84 @@
    },
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "            12NC  temperatures        mass   supplier\n6   402255334708     15.000000   89.811289  Company_A\n7   402258698328      1.111111  183.704910  Company_A\n8   402249767239     25.000000  698.985842  Company_A\n9   402235950496     55.000000  311.617958  Company_A\n10  402264653803     85.555556  306.174850  Company_A",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>12NC</th>\n      <th>temperatures</th>\n      <th>mass</th>\n      <th>supplier</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>6</td>\n      <td>402255334708</td>\n      <td>15.000000</td>\n      <td>89.811289</td>\n      <td>Company_A</td>\n    </tr>\n    <tr>\n      <td>7</td>\n      <td>402258698328</td>\n      <td>1.111111</td>\n      <td>183.704910</td>\n      <td>Company_A</td>\n    </tr>\n    <tr>\n      <td>8</td>\n      <td>402249767239</td>\n      <td>25.000000</td>\n      <td>698.985842</td>\n      <td>Company_A</td>\n    </tr>\n    <tr>\n      <td>9</td>\n      <td>402235950496</td>\n      <td>55.000000</td>\n      <td>311.617958</td>\n      <td>Company_A</td>\n    </tr>\n    <tr>\n      <td>10</td>\n      <td>402264653803</td>\n      <td>85.555556</td>\n      <td>306.174850</td>\n      <td>Company_A</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>12NC</th>\n",
+       "      <th>temperatures</th>\n",
+       "      <th>mass</th>\n",
+       "      <th>supplier</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>402255334708</td>\n",
+       "      <td>15.000000</td>\n",
+       "      <td>89.811289</td>\n",
+       "      <td>Company_A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>402258698328</td>\n",
+       "      <td>1.111111</td>\n",
+       "      <td>183.704910</td>\n",
+       "      <td>Company_A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>402249767239</td>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>698.985842</td>\n",
+       "      <td>Company_A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>402235950496</td>\n",
+       "      <td>55.000000</td>\n",
+       "      <td>311.617958</td>\n",
+       "      <td>Company_A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>402264653803</td>\n",
+       "      <td>85.555556</td>\n",
+       "      <td>306.174850</td>\n",
+       "      <td>Company_A</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            12NC  temperatures        mass   supplier\n",
+       "6   402255334708     15.000000   89.811289  Company_A\n",
+       "7   402258698328      1.111111  183.704910  Company_A\n",
+       "8   402249767239     25.000000  698.985842  Company_A\n",
+       "9   402235950496     55.000000  311.617958  Company_A\n",
+       "10  402264653803     85.555556  306.174850  Company_A"
+      ]
      },
+     "execution_count": 2,
      "metadata": {},
-     "execution_count": 27
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -994,7 +1065,7 @@
     "    )\n",
     "\n",
     "elif storing_filesystem == 'feather':\n",
-    "    # parquet, https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.to_parquet.html\n",
+    "    # parquet, https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.to_feather.html\n",
     "    df_import.to_parquet(\n",
     "        (filepath_for_storing_the_cleaned_database + '.feather'),\n",
     "    )\n",
@@ -1017,22 +1088,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "                12NC  temperatures        mass   supplier\n0       402255334708     15.000000   89.811289  Company_A\n1       402258698328      1.111111  183.704910  Company_A\n2       402249767239     25.000000  698.985842  Company_A\n3       402235950496     55.000000  311.617958  Company_A\n4       402264653803     85.555556  306.174850  Company_A\n...              ...           ...         ...        ...\n599977  402288016975     32.175651  805.580049  Company_B\n599978  402287657683     38.286853  583.773380  Company_B\n599979  402262726583     27.811233  330.668838  Company_B\n599980  402220423670     11.711350  839.145885  Company_B\n599981  402297181459     42.800131  459.489071  Company_B\n\n[599982 rows x 4 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>12NC</th>\n      <th>temperatures</th>\n      <th>mass</th>\n      <th>supplier</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>0</td>\n      <td>402255334708</td>\n      <td>15.000000</td>\n      <td>89.811289</td>\n      <td>Company_A</td>\n    </tr>\n    <tr>\n      <td>1</td>\n      <td>402258698328</td>\n      <td>1.111111</td>\n      <td>183.704910</td>\n      <td>Company_A</td>\n    </tr>\n    <tr>\n      <td>2</td>\n      <td>402249767239</td>\n      <td>25.000000</td>\n      <td>698.985842</td>\n      <td>Company_A</td>\n    </tr>\n    <tr>\n      <td>3</td>\n      <td>402235950496</td>\n      <td>55.000000</td>\n      <td>311.617958</td>\n      <td>Company_A</td>\n    </tr>\n    <tr>\n      <td>4</td>\n      <td>402264653803</td>\n      <td>85.555556</td>\n      <td>306.174850</td>\n      <td>Company_A</td>\n    </tr>\n    <tr>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <td>599977</td>\n      <td>402288016975</td>\n      <td>32.175651</td>\n      <td>805.580049</td>\n      <td>Company_B</td>\n    </tr>\n    <tr>\n      <td>599978</td>\n      <td>402287657683</td>\n      <td>38.286853</td>\n      <td>583.773380</td>\n      <td>Company_B</td>\n    </tr>\n    <tr>\n      <td>599979</td>\n      <td>402262726583</td>\n      <td>27.811233</td>\n      <td>330.668838</td>\n      <td>Company_B</td>\n    </tr>\n    <tr>\n      <td>599980</td>\n      <td>402220423670</td>\n      <td>11.711350</td>\n      <td>839.145885</td>\n      <td>Company_B</td>\n    </tr>\n    <tr>\n      <td>599981</td>\n      <td>402297181459</td>\n      <td>42.800131</td>\n      <td>459.489071</td>\n      <td>Company_B</td>\n    </tr>\n  </tbody>\n</table>\n<p>599982 rows × 4 columns</p>\n</div>"
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>12NC</th>\n",
+       "      <th>temperatures</th>\n",
+       "      <th>mass</th>\n",
+       "      <th>supplier</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>402255334708</td>\n",
+       "      <td>15.000000</td>\n",
+       "      <td>89.811289</td>\n",
+       "      <td>Company_A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>402258698328</td>\n",
+       "      <td>1.111111</td>\n",
+       "      <td>183.704910</td>\n",
+       "      <td>Company_A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>402249767239</td>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>698.985842</td>\n",
+       "      <td>Company_A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>402235950496</td>\n",
+       "      <td>55.000000</td>\n",
+       "      <td>311.617958</td>\n",
+       "      <td>Company_A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>402264653803</td>\n",
+       "      <td>85.555556</td>\n",
+       "      <td>306.174850</td>\n",
+       "      <td>Company_A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>402210410701</td>\n",
+       "      <td>13.888889</td>\n",
+       "      <td>740.262748</td>\n",
+       "      <td>Company_A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>402262421235</td>\n",
+       "      <td>82.777778</td>\n",
+       "      <td>406.872356</td>\n",
+       "      <td>Company_A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>402224951198</td>\n",
+       "      <td>16.666667</td>\n",
+       "      <td>759.767220</td>\n",
+       "      <td>Company_A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>402254974878</td>\n",
+       "      <td>38.888889</td>\n",
+       "      <td>801.044125</td>\n",
+       "      <td>Company_A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>402257850893</td>\n",
+       "      <td>42.222222</td>\n",
+       "      <td>137.438488</td>\n",
+       "      <td>Company_A</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           12NC  temperatures        mass   supplier\n",
+       "0  402255334708     15.000000   89.811289  Company_A\n",
+       "1  402258698328      1.111111  183.704910  Company_A\n",
+       "2  402249767239     25.000000  698.985842  Company_A\n",
+       "3  402235950496     55.000000  311.617958  Company_A\n",
+       "4  402264653803     85.555556  306.174850  Company_A\n",
+       "5  402210410701     13.888889  740.262748  Company_A\n",
+       "6  402262421235     82.777778  406.872356  Company_A\n",
+       "7  402224951198     16.666667  759.767220  Company_A\n",
+       "8  402254974878     38.888889  801.044125  Company_A\n",
+       "9  402257850893     42.222222  137.438488  Company_A"
+      ]
      },
+     "execution_count": 3,
      "metadata": {},
-     "execution_count": 30
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Merge a new supplier to the main database and store it\n",
-    "\n",
     "import pandas as pd\n",
     "\n",
     "filepath_of_csv_of_main_database = '.\\main_database.csv'\n",
@@ -1075,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1201,8 +1382,73 @@
    "outputs": [
     {
      "data": {
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Supplier A temperatures</th>\n      <th>Supplier A mass</th>\n    </tr>\n    <tr>\n      <th>Supplier A 12NC</th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>402.255.334.708</td>\n      <td>15.0000000000000000000000000</td>\n      <td>None</td>\n    </tr>\n    <tr>\n      <td>402.258.698.328</td>\n      <td>1.1111111111111111111111111</td>\n      <td>None</td>\n    </tr>\n    <tr>\n      <td>402.249.767.239</td>\n      <td>25.0000000000000000000000000</td>\n      <td>None</td>\n    </tr>\n    <tr>\n      <td>402.235.950.496</td>\n      <td>55.0000000000000000000000000</td>\n      <td>None</td>\n    </tr>\n    <tr>\n      <td>402.264.653.803</td>\n      <td>85.5555555555555555555555555</td>\n      <td>None</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
-      "text/plain": "                      Supplier A temperatures Supplier A mass\nSupplier A 12NC                                              \n402.255.334.708  15.0000000000000000000000000            None\n402.258.698.328   1.1111111111111111111111111            None\n402.249.767.239  25.0000000000000000000000000            None\n402.235.950.496  55.0000000000000000000000000            None\n402.264.653.803  85.5555555555555555555555555            None"
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Supplier A temperatures</th>\n",
+       "      <th>Supplier A mass</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Supplier A 12NC</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>402.255.334.708</td>\n",
+       "      <td>15.0000000000000000000000000</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>402.258.698.328</td>\n",
+       "      <td>1.1111111111111111111111111</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>402.249.767.239</td>\n",
+       "      <td>25.0000000000000000000000000</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>402.235.950.496</td>\n",
+       "      <td>55.0000000000000000000000000</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>402.264.653.803</td>\n",
+       "      <td>85.5555555555555555555555555</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      Supplier A temperatures Supplier A mass\n",
+       "Supplier A 12NC                                              \n",
+       "402.255.334.708  15.0000000000000000000000000            None\n",
+       "402.258.698.328   1.1111111111111111111111111            None\n",
+       "402.249.767.239  25.0000000000000000000000000            None\n",
+       "402.235.950.496  55.0000000000000000000000000            None\n",
+       "402.264.653.803  85.5555555555555555555555555            None"
+      ]
      },
      "execution_count": 31,
      "metadata": {},
@@ -1262,9 +1508,9 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "error",
      "ename": "NameError",
      "evalue": "name 'df_products' is not defined",
+     "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
@@ -1349,7 +1595,9 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "0.6095999999999999 meter\n"
+     "text": [
+      "0.6095999999999999 meter\n"
+     ]
     }
    ],
    "source": [
@@ -1386,10 +1634,13 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "89dc27c016772f8b60a147fbee50af1fbf313be93687cff132f9b4bcac777f61"
+  },
   "kernelspec": {
    "display_name": "Python 3.7.4 64-bit ('base': conda)",
    "language": "python",
-   "name": "python37464bitbaseconda436eee8014a147a9bb4bb1d46a33b7e9"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1401,7 +1652,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4-final"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
